# my_blog

./: .gitignore  pyproject.toml
main/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main/fixtures/: categories.json  readme.txt
main/migrations/: 0001_initial.py  0002_alter_likedarticle_options_favoritearticle_and_more.py  0002_article.py  0003_category_slug.py  0004_alter_category_slug.py  0005_alter_article_is_published.py  0006_alter_article_options_alter_article_category_and_more.py  0006_alter_article_options_alter_article_is_published_and_more.py  0007_alter_article_category_alter_category_name.py  0007_category_parent.py  0008_alter_article_category.py  0008_auto_20240808_2321.py  0009_alter_article_category.py  0010_remove_category_parent.py  0011_merge_20240811_2030.py  0012_alter_article_options_alter_category_options_and_more.py  0012_merge_20240902_1909.py
main/static/main/css/: additional_style.css  authButton.css  styles.css  trix_editor_style.css
main/static/main/js/: trix_customizations.js
main/templates/main/: about.html  article.html  article_moderation.html  index.html  list_categories.html  login.html  registration.html  select_category.html  test.html  write_article.html
main/templatetags/: blog_tags.py
my_blog/: settings.py  urls.py
templates/: base.html  base_2.html
users/: admin.py  authentication.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: edit_profile.html  login.html  profile.html  profile_edit.html  register_done.html  registration.html
(+5 files in other folders)
